syntax = "proto3";

package mdining;

import "google/api/annotations.proto";
import "api/proto/dininghalls.proto";
import "api/proto/items.proto";

service MDining {
  rpc GetDiningHalls(DiningHallsRequest) returns (DiningHallsReply) {
    option (google.api.http) = {
      get: "/v1/diningHalls"
    };
  }

  rpc GetItems(ItemsRequest) returns (ItemsReply) {
    option (google.api.http) = {
      get: "/v1/items"
    };
  }
}

message DiningHallsRequest { 
}

message DiningHallsReply { 
  DiningHalls diningHalls = 1;
}

message ItemsRequest {
  string items = 1;
}

message ItemsReply {
  Items items = 1;
}

